--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Anumoy Nandy",
   "license": "ISC",
   "dependencies": {
+    "@react-oauth/google": "^0.11.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
